# birlBaxter_recorded_motions

./: CMakeLists.txt  setup.py~
motion_files/assembly/bag_analysis/: plot_filtered_data.m~
scripts/: example_goHome.py  example_goHomeLeft.py  example_goHomeRight.py  example_goNeutral.py  example_paHome_bothArms.py  example_paHome_rightArm.py  example_shutdown.py
src/birl_recorded_motions/: GoHome.py  paHome_doubleArm.py  paHome_rightArm.py  paHome_rightArm.py~  shutdown.py
